--- a/src/styles/Landing.module.css
+++ b/src/styles/Landing.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 40px 0 40px 40px;
+    padding: 40px;
 }
 .left{
     width: 55%;
@@ -15,18 +15,19 @@
     line-height: 1;
 }
 .subHeader{
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     font-weight: 400;
     line-height: 1.4;
     font-weight: 400;
-    color: var(--sub-dark);
+    color: var(--sub-text);
     margin-left: 20px;
 }
 
 .right{
     width: 40%;
     position: relative;
-    display: block;
+    display: flex;
+    justify-content: end;
 }
 
 .right::after {
@@ -34,7 +35,7 @@
     position: absolute;
     bottom: -10px; 
     left: 50%;
-    transform: translateX(-57%);
+    transform: translateX(-44%);
     width: 70%; 
     height: 20px; 
     background: rgba(0, 0, 0, 0.5);
