finish quran api, quran page, middle of chapter page

--- a/src/styles/Navigaton.module.css
+++ b/src/styles/Navigaton.module.css
@@ -10,6 +10,7 @@
 }
 .navLink{
     text-decoration: none;
+    font-weight: 600;
     color: var(--main-dark);
     transition: all .3s ease-in-out;
 
