--- a/src/styles/WhatsappButton.module.css
+++ b/src/styles/WhatsappButton.module.css
@@ -9,6 +9,8 @@
     gap: 20px;
     margin-bottom: 10px;
     margin-left: 15px;
+    text-decoration: none;
+    width: fit-content;
     transition: all 0.3s ease-in-out;
 }
 .buttonWrapper:hover {
