--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,14 +1,31 @@
-:root{
-    --main-dark : #264653;
-    --main-light : #ffffff;
-    --sub-dark :#727171;
-    --active-link:#e63946;
+:root {
+    --main-dark: #264653;
+    --main-light: #ffffff;
+    --sub-dark: #727171;
+    --active-link: #e63946;
     --sub-text: #a8a8a8;
-
 }
-*{
+* {
     font-family: var(--font-roboto-mono);
 }
-a.active{
+
+::-webkit-scrollbar {
+    width: 20px;
+}
+::-webkit-scrollbar-track {
+    background-color: transparent;
+    width: 10px;
+}
+::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius: 20px;
+    border: 4px solid transparent;
+    background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
+}
+a.active {
     color: var(--active-link);
 }
