--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -10,8 +10,11 @@
 *{
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
+
 }
 html {
+    scroll-behavior: smooth;
     line-height: 1.15; /* 1 */
     -webkit-text-size-adjust: 100%; /* 2 */
 }
