--- a/src/styles/quran/VerseNumber.module.css
+++ b/src/styles/quran/VerseNumber.module.css
@@ -1,11 +1,15 @@
 .ayah {
     position: relative;
-    color: var(--main-dark);
+    display: inline-flex;
+    justify-content: center;
+    align-self: center;
+    width: 40px;
     font-size: 1.4rem;
+    margin-left: 10px;
+
 }
 .ayah::after {
     content: "\06DD";
-    display: block;
     position: absolute;
     top: 50%;
     left: 50%;
