--- a/src/styles/quran/ChapterCard.module.css
+++ b/src/styles/quran/ChapterCard.module.css
@@ -7,7 +7,7 @@
     gap: 15px;
     border-radius: 5px;
     transition: all 0.3s ease-in-out;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+    box-shadow: var(--box-shadow-three);
     cursor: pointer;
     border: 1px solid transparent;
     text-decoration: none;
@@ -23,7 +23,7 @@
     background: var(--main-light);
     border: 1px solid var(--main-dark);
     border-radius: 50%;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: var(--box-shadow-four);
     position: relative;
 }
 
