--- a/src/styles/quran/Verse.module.css
+++ b/src/styles/quran/Verse.module.css
@@ -8,7 +8,7 @@
     padding: 20px 30px;
     border-radius: 10px;
     text-align: right;
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3);
+    box-shadow: var(--box-shadow-one);
 }
 .audioWrapper {
     display: flex;
