--- a/src/styles/Landing.module.css
+++ b/src/styles/Landing.module.css
@@ -9,13 +9,14 @@
 }
 .landingHeader{
     color: var(--main-dark);
-    font-size: 3.6rem;
+    font-size: 4.2rem;
     font-weight:bolder;
-    margin-bottom: 5px;
+    width: 80%;
+    margin-bottom: 20px;
     line-height: 1;
 }
 .subHeader{
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     font-weight: 400;
     line-height: 1.4;
     font-weight: 400;
