--- a/src/styles/about-us/TeachersCardList.module.css
+++ b/src/styles/about-us/TeachersCardList.module.css
@@ -1,5 +1,6 @@
 .teachersCardList{
-    margin-top: 80px;
+    padding-top: 80px;
+    padding-bottom: 80px;
     display: flex;
     justify-content: center;
     row-gap: 60px;
