--- a/src/styles/quran/ChapterCard.module.css
+++ b/src/styles/quran/ChapterCard.module.css
@@ -18,6 +18,7 @@
     display: inline-flex;
     justify-content: center;
     align-items: center;
+    transition: inherit;
     padding: 10px 15px;
     /* background: radial-gradient(circle, #fdf2e9, #f0d9b5); */
     background: var(--main-light);
