--- a/src/styles/quran/Verse.module.css
+++ b/src/styles/quran/Verse.module.css
@@ -14,6 +14,7 @@
     display: flex;
     justify-content: space-between;
     cursor: pointer;
+    gap: 10px;
 }
 .audioWrapper:hover .arabic,
 .audioWrapper:hover .buttonWrapper {
@@ -22,6 +23,7 @@
 }
 
 .buttonWrapper {
+    margin-top: 8px;
     width: 30px;
     height: 30px;
     display: flex;
