--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,7 +2,7 @@
     --main-dark: #264653;
     --main-light: #ffffff;
     --sub-dark: #727171;
-    --active-link: #e63946;
+    --active-link: #D62839 ;
     --sub-text: #a8a8a8;
     --light-gray-border:#ccc;
     --subheader-color:#013042;
