--- a/src/styles/admin/globalAdmin.css
+++ b/src/styles/admin/globalAdmin.css
@@ -26,9 +26,17 @@ a.active{
 .adminButton{
     background-color: var(--dark-pink);
     color: var(--light-text);
-    padding: 5px 15px;
+    padding: 8px 20px;
     border-radius: 5px;
     cursor: pointer;
+    outline: none;
+    transition: .3s all;
+    font-size: 1rem;
+    border: none;
+}
+.adminButton:hover{
+    border-radius: 0;
+        background-color: #c70032;
 }
 .errorMessage{
     margin-top: 5px;
