--- a/src/styles/admin/add/AddForm.module.css
+++ b/src/styles/admin/add/AddForm.module.css
@@ -4,3 +4,8 @@
     font-size: 1.3rem;
     margin-bottom: 10px;
 }
+.submitButton{
+    display: block;
+    margin: auto;
+    margin-top: 20px;
+}
