--- a/src/styles/utils/Skeleton.module.css
+++ b/src/styles/utils/Skeleton.module.css
@@ -3,7 +3,8 @@
 .skeletonTitle,
 .skeletonLine,
 .skeletonLineShort,
-.skeletonIcon {
+.skeletonIcon,
+.skeletonSmallIcon {
     background-color: #ededed;
 
     background: linear-gradient(
@@ -26,7 +27,8 @@
 .skeletonCard {
     display: flex;
     gap: 20px;
-    justify-content: center;
+    /* justify-content: center; */
+    margin-bottom: 10px;
     align-items: center;
     border: 1px solid #ededed;
     padding: 20px;
@@ -35,6 +37,11 @@
 .skeletonIcon{
     width: 70px;
     height: 70px;
+    border-radius: 50%;
+}
+.skeletonSmallIcon{
+    width: 20px;
+    height: 20px;
     border-radius: 50%;
 }
 .skeletonInfo{
