--- a/src/styles/Landing.module.css
+++ b/src/styles/Landing.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    min-height: 56vh;
     padding: 40px;
 }
 .left{
@@ -36,7 +37,7 @@
     position: absolute;
     bottom: -10px; 
     left: 50%;
-    transform: translateX(-44%);
+    transform: translateX(-32%);
     width: 70%; 
     height: 20px; 
     background: rgba(0, 0, 0, 0.5);
