--- a/src/styles/about-us/AboutUsSections.module.css
+++ b/src/styles/about-us/AboutUsSections.module.css
@@ -34,3 +34,11 @@
     padding-left: 10px;
     line-height: 1.4;
 }
+@media (max-width: 968px) {
+    .services {
+        flex-direction: column;
+    }
+    .section {
+        width: 100%;
+    }
+}
