--- a/src/styles/Navigaton.module.css
+++ b/src/styles/Navigaton.module.css
@@ -6,6 +6,14 @@
     padding-bottom: 15px;
     padding-right: 30px;
     align-items: center;
+    max-width: 100%;
+}
+.navLinksWrapper{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: calc(100% - 37px);
+
 }
 .navLink{
     text-decoration: none;
@@ -15,5 +23,84 @@
 
 }
 .navLink:hover{
-    transform: scale(1.1);
+    transform: scale(1.05);
+}
+.barsIcon{
+    display: none;
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+    fill: var(--main-dark);
+}
+.closeIcon{
+    display: none;
+}
+.logo{
+    display: none;
+}
+@media (max-width: 1090px) {
+    .nav{
+        padding-left: 10%;
+    }
+}
+@media (max-width: 968px) {
+    .nav{
+        padding-left: 3%;
+        padding-right: 3%;
+    }
+    .navLink{
+        font-size: 0.9rem;
+    }
+}
+@media (max-width: 768px) {
+    .nav{
+        justify-content: space-between;
+    }
+    .navLinksWrapper{
+        position: absolute; 
+        width: 100%;
+        height: 100vh;
+        top: 0;
+        left: 100%;
+        width: 100%;
+        background-color: white;
+        flex-direction: column;
+        justify-content: center;
+        gap: 2rem;
+        z-index: 1000;
+        transition: all .3s ease-in-out;
+
+    }
+    .openNavLinkWrapper{
+        left: 0;
+    }
+    .navLink{
+        font-weight: 600;
+        font-size: 1.2rem;
+
+    }
+    .barsIcon{
+        display: block;
+    }
+    .closeIcon{
+        display: block;
+        position: absolute;
+        top: 30px;
+        left: 30px;
+        width: 25px;
+        height: 25px;
+        fill: var(--main-dark);
+        cursor: pointer;
+    }
+    .logo{
+        display: block;
+        width: 60px;
+        height: auto;
+    }
+    .mobileNavRight{
+        display: flex;
+        /* justify-content: space-between; */
+        gap: 20px;
+        align-items: center;
+    }
 }
