--- a/src/styles/about-us/CertificateSwiper.css
+++ b/src/styles/about-us/CertificateSwiper.css
@@ -20,7 +20,7 @@
 }
 .slideImage{
     display: block;
-    width: 100;
+    width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: inherit;
@@ -52,15 +52,23 @@
     transition: all .3s ease-in-out;
 }
 .swiper-pagination-bullet-active{
-    width: 32px;
+    width: 20px;
     background-color: rgba(25,43,206,1);
     border-radius: 14px;
 }
 .swiper-button-prev{
     position: absolute;
-    left: 100px;
+    left:5%;
 }
 .swiper-button-next{
     position: absolute;
-    right: 100px;
+    right:5%;
+}
+@media screen and (max-width:400px){
+    .swiper-slide{
+        width: 70%;
+    }
+    .certificate{
+        min-height: fit-content;
+    }
 }
