--- a/src/styles/blog/Blog.module.css
+++ b/src/styles/blog/Blog.module.css
@@ -1,3 +1,13 @@
-.blog{
-    padding: 40px;
+.blog {
+    padding: 20px;
+}
+@media (min-width: 1080px) {
+    .blog {
+        padding: 40px;
+    }
+}
+@media (max-width: 400px) {
+    .blog {
+        padding: 20px 10px;
+    }
 }
