--- a/src/styles/blog/RecentPost.module.css
+++ b/src/styles/blog/RecentPost.module.css
@@ -7,6 +7,7 @@
     overflow: hidden;
     height: 500px;
     display: flex;
+    box-sizing: border-box;
     align-items: end;
     text-decoration: none;
 }
@@ -46,5 +47,41 @@
     font-size: 0.9rem;
     color: whitesmoke;
     margin-bottom: 20px;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    line-clamp: 3;
+    overflow: hidden;
 }
 
+@media screen and (max-width: 978px) {
+    .recentPost {
+        width: 100%;
+    }
+    .header {
+        font-size: 1.8rem;
+    }
+    .description {
+        font-size: 0.8rem;
+    }
+}
+@media screen and (max-width: 600px) {
+    .recentPost {
+        height: 400px;
+    }
+    .infoWrapper {
+        padding: 10px;
+    }
+    .header {
+        font-size: 1.5rem;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 3;
+        line-clamp: 3;
+        overflow: hidden;
+    }
+    .description {
+        font-size: 0.7rem;
+        width: 100%;
+    }
+}
