--- a/src/styles/courses/CourseCard.module.css
+++ b/src/styles/courses/CourseCard.module.css
@@ -6,6 +6,7 @@
     display: flex;
     align-items: start;
     gap: 20px;
+    box-sizing: border-box;
     text-decoration: none;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
     background-color: #f7fae0;
@@ -21,13 +22,14 @@
 .courseCard:hover {
     z-index: 5;
     box-shadow: var(--box-shadow-pop); 
-    transform: scale(1.05); /* Slightly scales up the card on hover */
+    transform: scale(1.02); /* Slightly scales up the card on hover */
 }
 
 
 .imageWrapper {
     position: relative;
-    width: 15%; /* Slightly larger image */
+    width: 150px;
+    min-width: 150px; /* Slightly larger image */
     aspect-ratio: 1;
     border-radius: inherit;
 }
@@ -83,4 +85,31 @@
 
 .infoLink:hover::after {
     transform: translateX(3px); /* Slight animation for the arrow */
+}
+
+@media screen and (max-width:1080px){
+    .courseCard{
+        width: 95%;
+    }
+}
+@media screen and (max-width:768px){
+    .imageWrapper{
+        width: 180px;
+    }
+    .courseCard{
+        flex-direction: column;
+        align-items: center;
+    }
+    .info{
+        width: 100%;
+        text-align: center;
+    }
+}
+@media screen and (max-width:480px) {
+    .courseCard{
+        padding: 15px 5px;
+    }
+    .infoBody{
+        font-size: .9rem;
+    }
 }
