--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,6 +15,17 @@
 * {
     font-family: var(--font-roboto) var(--font-roboto-mono);
 }
+html{
+    scroll-behavior: smooth;
+
+}
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    overflow-x: hidden;
+}
+
 
 ::-webkit-scrollbar {
     width: 20px;
