--- a/src/styles/quran/ChapterLayout.module.css
+++ b/src/styles/quran/ChapterLayout.module.css
@@ -22,3 +22,15 @@
     margin: 0;
     color: var(--main-dark);
 }
+@media  (max-width: 400px) {
+    
+    .audioPlayer audio{
+        width: 300px;
+    }
+}
+@media  (max-width: 350px) {
+    
+    .audioPlayer audio{
+        width: 250px;
+    }
+}
