--- a/src/styles/quran/ChapterPage.module.css
+++ b/src/styles/quran/ChapterPage.module.css
@@ -8,3 +8,27 @@
     margin-bottom: 24px;
     font-size: 3rem;
 }
+@media (max-width: 1360px) {
+    .chapters {
+        padding: 20px 30px;
+    }
+    .header {
+        font-size: 2.5rem;
+    }
+}
+@media (max-width: 930px) {
+    .chapters {
+        padding: 20px 10px;
+    }
+    .header {
+        font-size: 2rem;
+    }
+}
+@media (max-width: 520px) {
+    .chapters {
+        padding: 20px 5px;
+    }
+    .header {
+        font-size: 1.5rem;
+    }
+}       
