--- a/src/styles/quran/Verse.module.css
+++ b/src/styles/quran/Verse.module.css
@@ -3,7 +3,8 @@
     flex-direction: column;
     justify-content: end;
     gap: 15px;
-    width: 90%;
+    width: 95%;
+    box-sizing: border-box  ;
     margin: auto;
     padding: 20px 30px;
     border-radius: 10px;
@@ -14,7 +15,7 @@
     display: flex;
     justify-content: space-between;
     cursor: pointer;
-    gap: 10px;
+    gap: 15px;
 }
 .audioWrapper:hover .arabic,
 .audioWrapper:hover .buttonWrapper {
@@ -45,4 +46,30 @@
     font-size: 1.2rem;
     text-align: left;
     color: var(--sub-dark);
+}
+@media (max-width: 768px) {
+    .verse {
+        padding: 20px 10px;
+    }
+    .arabicText {
+        font-size: 1.4rem;
+    }
+    .englishText {
+        font-size: 1rem;
+    }
+}
+@media (max-width: 450px) {
+    .verse {
+        width: 98%;
+    }
+    .audioWrapper {
+        flex-direction: column;
+        align-items: center;
+    }
+    .arabicText {
+        font-size: 1.2rem;
+    }
+    .englishText {
+        font-size: 0.9rem;
+    }
 }
