--- a/src/styles/quran/VerseNumber.module.css
+++ b/src/styles/quran/VerseNumber.module.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-self: center;
     width: 40px;
+    height: 40px;
     font-size: 1.4rem;
     margin-left: 10px;
 
