--- a/src/styles/quran/VersesNumbersList.module.css
+++ b/src/styles/quran/VersesNumbersList.module.css
@@ -51,3 +51,13 @@
 .number:hover{
     background-color: #ebeaea;
 }
+@media (max-width: 768px) {
+    
+    .numebrsList{
+        display: none;
+        /* width: 100%;
+        border-right: none;
+        border-bottom: 2px solid #d8d3d3; */
+    }
+
+}
