--- a/src/styles/Landing.module.css
+++ b/src/styles/Landing.module.css
@@ -1,4 +1,4 @@
-.landing{
+.landing {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -6,17 +6,20 @@
     padding: 40px;
     gap: 20px;
 }
-.left{
+.left {
     width: 55%;
 }
-.landingHeader{
+.landingHeader {
     color: var(--main-dark);
     font-size: 4.2rem;
-    font-weight:bolder;
+    font-weight: bolder;
     margin-bottom: 20px;
     line-height: 1;
 }
-.subHeader{
+.arLanding .landingHeader {
+    line-height: 1.4;
+}
+.subHeader {
     font-size: 1.2rem;
     font-weight: 400;
     line-height: 1.4;
@@ -26,100 +29,96 @@
     margin-left: 20px;
 }
 
-.right{
+.right {
     width: 40%;
     position: relative;
     display: flex;
     justify-content: center;
 }
-.landingImage{
+.landingImage {
     width: 100%;
     height: auto;
     max-width: 500px;
     border-radius: 10px;
 }
 .right::after {
-    content: ''; 
+    content: "";
     position: absolute;
-    bottom: -10px; 
+    bottom: -10px;
     left: 50%;
     transform: translateX(-50%);
-    width: 70%; 
-    height: 20px; 
+    width: 70%;
+    height: 20px;
     background: rgba(0, 0, 0, 0.5);
     border-radius: 50%;
-    filter: blur(8px); 
-    z-index: -1; 
-    opacity: .3;
+    filter: blur(8px);
+    z-index: -1;
+    opacity: 0.3;
 }
 @media (max-width: 1200px) {
-    .landing{
+    .landing {
         padding: 20px;
     }
-    .left, .right{
+    .left,
+    .right {
         width: 100%;
     }
-    .landingHeader{
+    .landingHeader {
         font-size: 3rem;
     }
-    .subHeader{
+    .subHeader {
         font-size: 1rem;
     }
-    .landingImage{
+    .landingImage {
         max-width: 400px;
     }
 }
 @media (max-width: 968px) {
-    .landing{
+    .landing {
         padding: 10px;
-    min-height: 68vh;
-
+        min-height: 68vh;
     }
-    .landingHeader{
+    .landingHeader {
         font-size: 2.5rem;
     }
-    .subHeader{
+    .subHeader {
         font-size: 1rem;
     }
-    .right{
+    .right {
         max-width: 35%;
     }
-    
 }
-@media (max-width: 768px){
-    .landing{
+@media (max-width: 768px) {
+    .landing {
         flex-direction: column-reverse;
         align-items: center;
         justify-content: center;
         text-align: center;
-    min-height: 64vh;
-
+        min-height: 64vh;
     }
-    .left{
+    .left {
         width: 95%;
     }
-    .landingHeader{
+    .landingHeader {
         font-size: 3.4rem;
         margin-bottom: 35px;
-        
     }
-    .subHeader{
+    .subHeader {
         font-size: 1.2rem;
         margin-left: 0;
     }
-    .right{
+    .right {
         display: none;
     }
 }
-@media (max-width: 530px){
-    .landingHeader{
+@media (max-width: 530px) {
+    .landingHeader {
         font-size: 2.5rem;
     }
-    .subHeader{
+    .subHeader {
         font-size: 1rem;
     }
-    .landingImage{
+    .landingImage {
         max-width: 300px;
     }
-
 }
