--- a/src/styles/blog/RecentPost.module.css
+++ b/src/styles/blog/RecentPost.module.css
@@ -31,7 +31,8 @@
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
-    padding: 15px;
+    width: 100%;
+    padding:30px 15px;
     color: var(--main-light);
     -webkit-backdrop-filter: blur(5px);
 }
